k8s-manifests/python-demo-population-mysql-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: python-demo-population-mysql
  namespace: python-population-app
  labels:
    app: python-demo-population-db
    role: mysql
spec:
  selector:
    matchLabels:
      app: python-demo-population-db
      role: mysql
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: python-demo-population-db
        role: mysql
    spec:
      containers:
      - name: python-demo-population-mysql
        image: mysql:5.7.40
        ports:
        - containerPort: 3306
          name: mysql
        volumeMounts:
        - name: mysql-persistent-storage
          mountPath: /var/lib/mysql
        - name: mysql-sql-scripts
          mountPath: /etc/population.sql
      volumes:
      - name: mysql-persistent-storage
        persistentVolumeClaim:
          claimName: mysql-pv-claim
      - name: mysql-sql-scripts
        secret:
          secretName: python-demo-population-secret-sql
