k8s-manifests/deployment.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: python-demo-population-mysql
  namespace: python-population-app
  labels:
    app: python-demo-population-db
    role: mysql
spec:
  ports:
    - port: 3306
  selector:
    app: python-demo-population-db
    role: mysql
  clusterIP: None

---
apiVersion: v1
kind: Service
metadata:
  name: python-demo-population-web
  namespace: python-population-app
spec:
  selector:
    app: python-demo-population
    role: web
  ports:
    - name: http
      port: 80
      targetPort: 5000

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: python-demo-population-mysql
  namespace: python-demo-population
  labels:
    app: python-demo-population-db
    role: mysql
spec:
  selector:
    matchLabels:
      app: python-demo-population-db
      role: mysql
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: python-demo-population-db
        role: mysql
    spec:
      containers:
        - image: mysql:5.8
          name: python-demo-population-mysql
      ports:
        - containerPort: 3306
          name: mysql
      volumeMounts:
        - name: mysql-persistent-storage
          mountPath: /var/lib/mysql
    volumes:
      - name: mysql-persistent-storage
        persistentVolumeClaim:
          claimName: mysql-pv-claim
    readinessProbe:
      exec:
        command:
          - mysql
          - -h
          - 127.0.0.1
          - -e
          - SELECT 1
        initialDelaySeconds: 5
        timeoutSeconds: 1
    livenessProbe:
      initialDelaySeconds: 5
      exec:
        command:
          - /bin/sh
          - -c
          - pidof -x mysql

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: python-demo-population-web
  namespace: python-demo-population
spec:
  replicas: 2
  selector:
    matchLabels:
      app: python-demo-population
      role: web
  template:
    metadata:
      labels:
        app: python-demo-population
        role: web
    spec:
      securityContext:
        runAsGroup: 1000
        runAsUser: 1000
      containers:
        - name: python-demo-population-web
          image: ankit630/population:v1
          ports:
            - containerPort: 5000
          resources:
            requests:
              memory: 256Mi
              cpu: 200m
            limits:
              memory: 512Mi
              cpu: 500m
          readinessProbe:
            initialDelaySeconds: 10
            httpGet:
              port: 5000
              path: /healthy
          livenessProbe:
            initialDelaySeconds: 10
            exec:
              command:
                - /bin/sh
                - -c
                - pidof -x python
