k8s-manifests/python-demo-population-web-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: python-demo-population-web
  namespace: python-population-app
spec:
  selector:
    app: python-demo-population
    role: web
  ports:
    - name: http
      port: 80
      targetPort: 5000
